--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20"
   }
 }
