--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mysten/dapp-kit": "^0.14.50",
+    "@mysten/sui": "^1.22.0",
+    "@tanstack/react-query": "^5.67.2",
     "bootstrap": "^5.3.3",
     "mini-css-extract-plugin": "^2.9.2",
     "next": "15.1.7",
